welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:18: error: not found: value p
      p = litMessage().toInt
      ^Array2:21: error: not found: value p
      setCouleurBrosse(T((k+p)%(getWorldHeight())));
                            ^